:beetle: prevent text from overflowing the screen because of very wide keymaps

--- a/sass/css/_bootstrap.sass
+++ b/sass/css/_bootstrap.sass
@@ -36,6 +36,7 @@ body .markdown-body
   padding-bottom	: 1.7em	//
   padding-left  	: 1.4em	//40px
   padding-right 	: 0.0em	//40px
+  max-width     	: 100vw // prevent text from overflowing the screen because of very wide keymaps
 
 body
   font-family        	: "Helvetica Neue", Helvetica, Arial, sans-serif
